assets/scss/custom.scss
@import "../css/bootstrap.min.css";
@import "../css/loading-bar.css";
@import "../css/jquery.carousel-3d.default.css";
@import "../css/aos.css";

//Bootstrap override
.jumbotron {
  padding-top: 0px;
  padding-bottom: 0;
}

.navbar {
  display: inline-block;
  margin-bottom: 0;
  padding: 0;
}

.jumbotron-video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  overflow: hidden;
}

.jumbotron-heading {
  position: absolute;
  top: 50%;
  left: 0;
}

//Custom classes

.navbar-footer-bg-color {
  background-color: #5b6063;
}

.alert-on-page {
  z-index: 300;
}

.resume-download {
  color: grey;
}

.resume-download:hover {
  color: white !important;
  text-decoration: none;
}

.project-section-background {
  background-image: url("../images/project-section-background.png");
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
}

.contact-section-background {
  background-image: url("../images/contact-section-background.png");
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
}

.personal-skills-responsive {
  display: none;
}

.min-height-100 {
  min-height: 100%;
}

.alert-top-offset {
  top: 56px;
  z-index: 100;
}

//LoadingBar.js override
.ldBar-label {
  font-size: 1.5em;
}

//HTML Tag styles override
section {
  width: 100%;
  min-height: 100vh;
}

video {
  pointer-events: none;
}

ul {
  list-style-type: square;
}

//3D Carousel override
[data-carousel-3d] {
  background: none;
  border: none;
  color: black;
}

[data-child-frame] {
  border: none;
}

[data-child] {
  background-color: white;
  border-radius: 5%;
}

.toggle-responsive {
  display: inline-block;
}

//Media Queries
@media (max-width: 700px) {
  .project-section-background {
    background-image: none;
  }

  .contact-section-background {
    background-image: none;
  }

  [data-carousel-3d] {
    display: none;
  }

  .personal-skills-responsive {
    display: inline-block;
  }

  .toggle-responsive {
    display: none;
  }
}

